--- a/nosotros.html
+++ b/nosotros.html
@@ -66,7 +66,7 @@
     <div class="preloader  ">
         <button class="vs-btn preloaderCls">Cancel Preloader </button>
         <div class="preloader-inner">
-            <div class="loader-logo"><img src="assets/img/logo-loader.svg" alt="logo"></div>
+            <div class="loader-logo"><img src="assets/img/logo.png" class="mae-logo" alt="logo"></div>
             <div class="spinner"></div>
         </div>
     </div><!--==============================
