subiendo cambios de footer

--- a/nosotros.html
+++ b/nosotros.html
@@ -331,6 +331,10 @@ Sidemenu
                                     <a href="https://www.facebook.com/MaeLatamGaming" target="_blank"><i class="fab fa-facebook-f"></i></a>
                                     <a href="https://twitter.com/maelatamgaming" target="_blank"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.instagram.com/maelatamgaming/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.youtube.com/channel/UCIRHXkCHTUCpOTjp-EaGxJA/" target="_blank"><i class="fab fa-youtube"></i></a>
+                                    <a href="https://discord.com/invite/5xuCMDsKxh" target="_blank"><i class="fab fa-discord"></i></a>
+                                    
+                                    <h5 style="margin-top: 20px;"> maecontacto1@gmail.com </h5>
                                 </div>
                             </div>
                         </div>
