subiendo noticias dia programador

--- a/index.html
+++ b/index.html
@@ -356,6 +356,22 @@
                 <div class="col-xl-4">
                     <div class="vs-blog blog-style1">
                         <div class="blog-img">
+                            <img src="assets/noticias/noticia_4.png" alt="Blog Thumbnail" class="w-100">
+                            <div class="meta-box">
+                                <a href="noticias/post4.html">13.09.2023</a>
+                                <a href="noticias/post4.html">MAE Gaming</a>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <h3 class="blog-title h5"><a href="noticias/post4.html">Videojuegos y Programadores: La Revolución Tecnológica que Definió una Era</a></h3>
+                            <a href="noticias/post4.html" class="blog-btn">Leer Mas..<i class="far fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4">
+                    <div class="vs-blog blog-style1">
+                        <div class="blog-img">
                             <img src="assets/noticias/noticia_3.png" alt="Blog Thumbnail" class="w-100">
                             <div class="meta-box">
                                 <a href="noticias/post3.html">27.08.2023</a>
