--- a/index.html
+++ b/index.html
@@ -352,6 +352,23 @@
                 <div class="sec-line"></div>
             </div>
             <div class="row vs-carousel wow fadeInUp" data-wow-delay="0.4s" data-slide-show="3" data-md-slide-show="2">
+                
+                <div class="col-xl-4">
+                    <div class="vs-blog blog-style1">
+                        <div class="blog-img">
+                            <img src="assets/noticias/noticia_5.png" alt="Blog Thumbnail" class="w-100">
+                            <div class="meta-box">
+                                <a href="noticias/post5.html">26.09.2023</a>
+                                <a href="noticias/post5.html">MAE Gaming</a>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <h3 class="blog-title h5"><a href="noticias/post5.html">Del Caos Nuclear a la Esperanza: El Rol de los Videojuegos en la Conciencia del Desarme</a></h3>
+                            <a href="noticias/post5.html" class="blog-btn">Leer Mas..<i class="far fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="col-xl-4">
                     <div class="vs-blog blog-style1">
