subiendo noticia musica

--- a/index.html
+++ b/index.html
@@ -364,6 +364,22 @@
                 <div class="col-xl-4">
                     <div class="vs-blog blog-style1">
                         <div class="blog-img">
+                            <img src="assets/noticias/noticia_7.png" alt="Blog Thumbnail" class="w-100">
+                            <div class="meta-box">
+                                <a href="noticias/post7.html">22.11.2023</a>
+                                <a href="noticias/post7.html">MAE Gaming</a>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <h3 class="blog-title h5"><a href="noticias/post7.html"> Notas que trascienden pantallas: El viaje musical a través de las eras del gaming </a></h3>
+                            <a href="noticias/post7.html" class="blog-btn">Leer Mas..<i class="far fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4">
+                    <div class="vs-blog blog-style1">
+                        <div class="blog-img">
                             <img src="assets/noticias/noticia_5.png" alt="Blog Thumbnail" class="w-100">
                             <div class="meta-box">
                                 <a href="noticias/post5.html">26.09.2023</a>
